# pia-discord-bot

./: .gitignore  Dockerfile  README.md  coding_instructions.md  docker-compose.yml  pia-discord-bot.py  pia-discord-bot_config_template.json  pyproject.toml  requirements.txt
Modules/: strings.py
Modules/Cache/: __init__.py  cache.py
Modules/Commons/: __init__.py  commons.py  config.py
Modules/Content/: __init__.py  models.py  processor.py  youtube.py
Modules/Discord/: __init__.py  bot.py
Modules/Summarization/: __init__.py  claude.py  openai.py  summarizer.py
