[tool.poetry]
name = "pia-discord-bot"
version = "0.1.0"
description = "A Discord bot that monitors channels for links, creates threads, and summarizes content"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
discord-py = "^2.3.1"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
langchain = { version = "^0.0.267", python = ">=3.8.1,<4.0" }
pytubefix = "^4.0.0"  # Using pytubefix instead of pytube
youtube-transcript-api = { version = "^1.0.3", python = ">=3.8,<3.14" }
anthropic = "^0.49.0"
openai = "^1.74.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
